--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,28 +1,9 @@
-<!-- <% if signed_in? %>
-	<div class="row">
-		<aside class="span4">
-			<section>
-				<%= render 'shared/user_info' %>
-			</section>
-			<section>
-				<%= render 'shared/stats' %>
-			</section>
-			<section>
-				<%= render 'shared/micropost_form' %>
-			</section>
-		</aside>
-		<div class="span8">
-			<h3>Post Feed</h3>
-			<%= render 'shared/feed' %>
-		</div>
-	</div> 
-<% else %> -->
 <div class="center hero-unit">
 	<h1>Welcome to TANK</h1>
 	<h2>
 		The only online, collaborative think tank for college students.
 	</h2>
-	<% if signed_in? %>
+	<% if !signed_in? %>
 		<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 	<% else %>
 		<%= link_to "Contribute to Forums", '#', class: "btn btn-large btn-primary" %>
