--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
 			<div class="navbar-inner">
 				<ul class="nav nav-justified pull-right">
 					<li><%= link_to "Home", root_path %></li>
-					<li><%= link_to "Help", help_path %></li>
+					<li><%= link_to "Our Vision", vision_path %></li>
+					<li><%= link_to "Forums", forums_path %></li>
 					<% if signed_in? %>
 						<li><%= link_to "Users", users_path %></li>
 						<li id="fat-menu" class="dropdown">
