changed 'topic' to 'forum' for example forums

--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -1,3 +1,4 @@
 <% provide(:title, @forum.name) %>
 <h1><%= @forum.name %></h1>
+<h3><%= @forum.description %></h3>
 Collection of all the topics in this forum!
