--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Forums') %>
 <h1>Forums</h1>
-<h2>We're beginning with just three, <strong>Poverty</strong>, <strong>Topic 2</strong>, and <strong>Topic 3</strong> but are looking to expand.</h2>
+<h2>We're beginning with just three, <strong>Poverty</strong>, <strong>Forum 2</strong>, and <strong>Forum 3</strong> but are looking to expand.</h2>
 
 All the forums are here!
 
