--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,2 +1,24 @@
-<h1>Topic: How can we most efficientlly distribute mosquito nets across Africa?</h1>
-<p>Specific topic</p>
+<% provide(:title, @topic.problem) %>
+<h1><%= @topic.problem %></h1>
+<p class="lead">Background Information: <%= @topic.description %></p>
+
+<% if @topic.microposts.any? %>
+    <h3>Solutions (<%= @topic.microposts.count %>)</h3>
+    <ol class="microposts">
+    	<%= render partial: 'shared/micropost', collection: @microposts %>
+    </ol>
+    <%= will_paginate @microposts %>
+<% end %>
+
+<% if signed_in? %>
+	<div class="row">
+	  <aside class="span8 offset2">
+	    <section>
+	      <%= render 'shared/user_info' %>
+	    </section>
+	    <section>
+	      <%= render 'shared/micropost_form' %>
+	    </section>
+	  </aside>
+	</div>
+<% end %>
