--- a/app/views/shared/_micropost.html.erb
+++ b/app/views/shared/_micropost.html.erb
@@ -1,7 +1,9 @@
 
 <li>
-	<span class="forum">Forum: <%= Forum.find(Topic.find(micropost.topic_id).forum_id).name %></span><br>
-	<span class="topic">Topic: <%= Topic.find(micropost.topic_id).problem %></span><br>
+	<%= link_to gravatar_for(micropost.user), micropost.user %>
+	<span class="user">
+    	<%= link_to micropost.user.name, micropost.user %>
+    </span><br>
 	<span class="summary">Title: <%= wrap(micropost.summary) %></span>
 	<span class="content">Content: <%= wrap(micropost.content) %></span>
 	<span class="timestamp">
