--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for(@micropost) do |f| %>
 	<%= render 'shared/error_messages', object: f.object %>
 	<div class="field">
+		<%= f.text_field :summary, placeholder: "One-line summary..." %>
 		<%= f.text_area :content, placeholder: "Compose a new post..." %>
 	</div>
 	<%= f.submit "Post", class: "btn btn-large btn-primary" %>
