--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,9 +8,9 @@
 	<% else %>
 		<%= link_to "Contribute to Forums", forums_path, class: "btn btn-large btn-primary" %>
 	<% end %>
-</div>
+</div><hr>
 <div class="center">
-	<em>Click on a topic below to see what ideas the nation's brightest students have to make the world a better place</em>
+	<em>Click on a topic below to see what ideas the nation's brightest students have to make the world a better place</em><hr>
 </div>
 <div class="row">
 	<div class="span4">
