--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -1,4 +1,8 @@
-<li>
-    <h4><%= link_to topic.problem, topic %></h4>
-	<span class="content"><%= topic.description %></span>
-</li>
+<table class="table table-hover">
+	<tr>
+		<td>
+	    	<h4><%= link_to topic.problem, topic %></h4>
+			<span class="content"><%= topic.description %></span>
+		</td>
+	</tr>
+</table>
