--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -2,9 +2,9 @@
 <h1>Forums</h1>
 <h2>We're beginning with just three, <strong>Poverty</strong>, <strong>Forum 2</strong>, and <strong>Forum 3</strong> but are looking to expand.</h2>
 
-<ul class="forums">
+<ul class="forums row">
   <% @forums.each do |forum| %>
-    <li>
+    <li class="span4">
       <h3><%= link_to forum.name, forum %></h3>
 	  <span class="content"><%= forum.description %></span>
 	  <%= link_to "View Forum", forum_path(1), class: "btn btn-inverse btn-small" %>
