--- a/app/views/shared/_micropost.html.erb
+++ b/app/views/shared/_micropost.html.erb
@@ -4,8 +4,8 @@
 	<span class="user">
     	<%= link_to micropost.user.name, micropost.user %>
     </span><br>
-	<span class="summary">Title: <%= wrap(micropost.summary) %></span>
-	<span class="content">Content: <%= wrap(micropost.content) %></span>
+	<span class="summary"><strong><%= wrap(micropost.summary) %></strong></span>
+	<span class="content"><%= wrap(micropost.content) %></span>
 	<span class="timestamp">
 		Posted <%= time_ago_in_words(micropost.created_at) %> ago.
 	</span>
