--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,16 +5,30 @@
 			<h1>
 				<%= gravatar_for @user %>
 				<%= @user.name %>
+				<% if @user.mod? %>
+					<br><h2 style="text-align:left">Moderator</h2>
+				<% end %>
+				<% if @user.admin? && current_user.admin? %>
+					<br><h2 style="text-align:left">Administrator</h2>
+				<% end %>
 			</h1>
+			<br>
+			<% if current_user?(@user) && current_user.admin? %>
+				<%= render 'admin_interface' %>
+			<% end %>
 		</section>
 	</aside>
 	<div class="span8">
-		<% if @user.microposts.any? %>
-			<h3>Posts (<%= @user.microposts.count %>)</h3>
-			<ol class="microposts" %>
-				<%= render @microposts %>
-			</ol>
-			<%= will_paginate @microposts %>
+		<% if current_user?(@user) %>
+			<% if @user.microposts.any? %>
+				<h3>Posts (<%= @user.microposts.count %>)</h3>
+				<ol class="microposts" %>
+					<%= render @microposts %>
+				</ol>
+			<% end %>
+		<% end %>
+		<% if current_user?(@user) && current_user.mod? %>
+			<%= render 'topics/mod_interface' %>
 		<% end %>
 	</div>
 </div>
