--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,9 +5,12 @@
 				<ul class="nav nav-justified pull-right">
 					<li><%= link_to "Home", root_path %></li>
 					<li><%= link_to "Our Vision", vision_path %></li>
+					<li><%= link_to "Moderators", moderators_path %></li>
 					<li><%= link_to "Forums", forums_path %></li>
 					<% if signed_in? %>
-						<li><%= link_to "Users", users_path %></li>
+						<% if current_user.admin? %>
+							<li><%= link_to "Users", users_path %></li>
+						<% end %>
 						<li id="fat-menu" class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 								Account <b class="caret"></b>
