--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -6,7 +6,7 @@
 		<%= f.text_field :summary, placeholder: "One-line summary..." %>
 		<%= f.text_area :content, placeholder: "Compose a new post..." %>
 	</div>
-	<%= f.submit "Post", class: "btn btn-large btn-primary" %>
+	<%= f.submit "Submit for Consideration", class: "btn btn-large btn-primary" %>
 	<span class="countdown"></span>
 <% end %>
 
