--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -2,7 +2,7 @@
 <h1><%= @topic.problem %></h1>
 <p class="lead">Background Information: <%= @topic.description %></p>
 
-<% if @topic.microposts.any? %>
+<% if @topic.microposts.approved.any? %>
     <h3>Solutions (<%= @topic.microposts.count %>)</h3>
     <ol class="microposts">
     	<%= render partial: 'shared/micropost', collection: @microposts %>
@@ -10,7 +10,7 @@
     <%= will_paginate @microposts %>
 <% end %>
 
-<% if signed_in? %>
+<% if signed_in? && !current_user.mod?%>
 	<div class="row">
 	  <aside class="span8 offset2">
 	    <section>
