--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,9 +1,15 @@
-<%= render 'shared/error_messages', object: f.object %>
+<div class="control-group">
+	<div class="controls row-fluid control-label">
+		<%= f.label :first_name, class: "span6 row", style: "margin:0" %>
+		<%= f.label :last_name, class: "span6 row", style: "margin:0" %>
+	</div>
+	<div class="controls row-fluid">
+		<%= f.text_field :first_name, class: "span6 row", style: "margin:0" %>
+		<%= f.text_field :last_name, class: "span6 row", style: "margin:0" %>
+	</div>
+</div>
 
-<%= f.label :name %>
-<%= f.text_field :name %>
-
-<%= f.label :email %>
+<%= f.label :email, "Email (college email address required)" %>
 <%= f.text_field :email %>
 
 <%= f.label :password %>
