--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,24 @@
 <li>
 	<%= gravatar_for user, size: 52 %>
-	<%= link_to user.name, user %> 
+	<%= link_to user.name, user %>
+
 	<% if current_user.admin? && !current_user?(user) %>
 		| <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
+	<% end %>
+
+	<% if user.mod? %>
+		<h4 style="text-align: right">MODERATOR</h4>
+	<% end %>
+
+	<% if current_user.admin? %>
+		<% if !user.mod? %>
+			<p style="text-align: right"><%= link_to "Make Mod", make_mod_user_path(user), method: :put %></p>
+		<% end %>
+		<% if user.admin? %>
+			<h4 style="text-align: right">ADMINISTRATOR</h4>
+		<% else %>
+			<p style="text-align: right"><%= link_to "Make Admin", make_admin_user_path(user), method: :put %></p>
+
+		<% end %>
 	<% end %>
 </li>
