--- a/app/views/shared/_micropost.html.erb
+++ b/app/views/shared/_micropost.html.erb
@@ -9,7 +9,13 @@
 	<span class="timestamp">
 		Posted <%= time_ago_in_words(micropost.created_at) %> ago.
 	</span>
+
 	<% if current_user?(micropost.user) %>
 		<%= link_to "delete", micropost, method: :delete, data: { confirm: "You sure?" }, title: micropost.content %>
+	<% end %>
+
+	<% if current_user.mod? and !micropost.approved? %>
+		<%= link_to "Approve", approve_post_micropost_path(micropost), method: :put %> | 
+		<%= link_to "Reject", micropost, method: :delete, title: micropost.content %>
 	<% end %>
 </li>
