remove forums and descriptions

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,22 +10,6 @@
 	<% end %>
 </div><hr>
 <div class="center">
-	<em>Click on a topic below to see what ideas the nation's brightest students have to make the world a better place</em><hr>
+	<em>Vision blurb here</em><hr>
 </div>
-<div class="row">
-	<div class="span4">
-		<h3 class="center">Poverty</h3>
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam cursus. Morbi ut mi. Nullam enim leo, egestas id, condimentum at, laoreet mattis, massa. Sed eleifend nonummy diam. Praesent mauris ante, elementum et, bibendum at, posuere sit amet, nibh. Duis tincidunt lectus quis dui viverra vestibulum. Suspendisse vulputate aliquam dui. Nulla elementum dui ut augue.</p>
-		<%= link_to "More...", forum_path(1), class: "btn btn-inverse btn-small" %>
-	</div>
-	<div class="span4">
-		<h3 class="center">Forum 2</h3>
-		<p>Aliquam vehicula mi at mauris. Maecenas placerat, nisl at consequat rhoncus, sem nunc gravida justo, quis eleifend arcu velit quis lacus. Morbi magna magna, tincidunt a, mattis non, imperdiet vitae, tellus. Sed odio est, auctor ac, sollicitudin in, consequat vitae, orci. Fusce id felis. Vivamus sollicitudin metus eget eros.</p>
-		<%= link_to "More...", forum_path(2), class: "btn btn-inverse btn-small" %>
-	</div>
-	<div class="span4">
-		<h3 class="center">Forum 3</h3>
-		<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In posuere felis nec tortor. Pellentesque faucibus. Ut accumsan ultricies elit. Maecenas at justo id velit placerat molestie. Donec dictum lectus non odio. Cras a ante vitae enim iaculis aliquam. Mauris nunc quam, venenatis nec, euismod sit amet, egestas placerat, est.</p>
-		<%= link_to "More...", forum_path(3), class: "btn btn-inverse btn-small" %>
-	</div>
-</div>
+
