--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
 				<ul class="nav nav-justified pull-right">
 					<li><%= link_to "Home", root_path %></li>
 					<li><%= link_to "Our Vision", vision_path %></li>
-					<li><%= link_to "Moderators", moderators_path %></li>
+					<li><%= link_to "Our Moderators", moderators_path %></li>
 					<li><%= link_to "Forums", forums_path %></li>
 					<% if signed_in? %>
 						<% if current_user.admin? %>
