--- a/app/views/users/mod_index.html.erb
+++ b/app/views/users/mod_index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Moderators') %>
-<h1>Moderators</h1>
+<h1>Our Moderators</h1>
 
 <ul class="users">
   <% @users.each do |user| %>
