--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -4,6 +4,7 @@
     <li data-target="#homeslider" data-slide-to="0" class="active"></li>
     <li data-target="#homeslider" data-slide-to="1"></li>
     <li data-target="#homeslider" data-slide-to="2"></li>
+    <li data-target="#homeslider" data-slide-to="3"></li>
   </ol>
 
   <!-- Wrapper for slides -->
@@ -35,7 +36,17 @@
     </div>
 
     <div class="item">
-      <img src="/assets/college_temp.jpg" alt="College">
+      <img src="/assets/harvard_temp.jpg" alt="College">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>Innovative Solutions</h1>
+          <p class="lead">from the nation's brightest university students</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="/assets/harvard_temp2.jpg" alt="College">
       <div class="container">
         <div class="carousel-caption">
           <h1>Innovative Solutions</h1>
