--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -40,7 +40,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>Innovative Solutions</h1>
-          <p class="lead">from the nation's brightest university students</p>
+          <p class="lead">from the nation's brightest college students</p>
         </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>Innovative Solutions</h1>
-          <p class="lead">from the nation's brightest university students</p>
+          <p class="lead">from the nation's brightest college students</p>
         </div>
       </div>
     </div>
