fix post errors, white nav links

--- a/app/assets/stylesheets/home/carousel.css.scss
+++ b/app/assets/stylesheets/home/carousel.css.scss
@@ -117,6 +117,13 @@ p {
   }
 }
 
+.white {
+	color: white !important;
+	&:hover {
+		color: $grayLight !important;
+	}
+}
+
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
