--- a/app/views/layouts/_header2.html.erb
+++ b/app/views/layouts/_header2.html.erb
@@ -16,7 +16,7 @@
                   <% end %>
                   <li id="fat-menu" class="dropdown">
                     <a href="#" class="dropdown-toggle white" data-toggle="dropdown">
-                      Account <b class="caret"></b>
+                      Account <b class="caret white-caret"></b>
                     </a>
                     <ul class="dropdown-menu">
                       <li><%= link_to "Profile", current_user %></li>
