--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<br>
-		<%= render 'layouts/header2' %>
+		<%= render 'layouts/header' %>
 		<%= render 'layouts/carousel' %>
 		<div class="container">
 			<% flash.each do |key, value| %>
