--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<%= render 'layouts/header' %>
+		<img src="/assets/header.jpg" alt="Globe cap" class="header_img">
 		<div class="container">
 			<% flash.each do |key, value| %>
 				<%= content_tag(:div, value, class: "alert alert-#{key}") %>
