rename app from sample app to ideatank

--- a/app/views/contact_mailer/contact_message.html.erb
+++ b/app/views/contact_mailer/contact_message.html.erb
@@ -4,7 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p><%= @message.message %><br/></p>
-    <p><%= @message.name %> (<%= @message.email %>)</p>
+  	<p>Name: </p><p><%= @message.name %><br/></p>
+  	<p>Email: </p><p><%= @message.email %><br/></p>
+  	<p>Subject: </p><p><%= @message.subject %><br/></p>
+    <p>Message:</p><p><%= @message.message %><br/></p>
   </body>
 </html>
