--- a/app/views/contact_mailer/contact_message.text.erb
+++ b/app/views/contact_mailer/contact_message.text.erb
@@ -1,3 +1,7 @@
-<%= @message.message %>
- 
-<%= @message.name %> (<%= @message.email %>)
+Name: <%= @message.name %>
+
+Email: <%= @message.email %>
+
+Subject: <%= @message.subject %>
+
+Message: <%= @message.message %>
