--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -28,8 +28,9 @@
       <img src="/assets/poverty_temp.jpg" alt="Poverty">
       <div class="container">
         <div class="carousel-caption">
-          <h1>Poverty</h1>
-          <p class="lead">What can we do to make a difference?</p>
+          <h1>Every 3.6 seconds, somebody starves to death</h1>
+          <p class="lead">What can we do to make a difference?</p><br>
+          <%= link_to "Visit the Poverty Forum", forums_path(1), class: "btn btn-large btn-primary" %>
         </div>
       </div>
     </div>
@@ -38,8 +39,9 @@
       <img src="/assets/harvard_temp.jpg" alt="College">
       <div class="container">
         <div class="carousel-caption">
-          <h1>Innovative Solutions</h1>
-          <p class="lead">from the nation's brightest college students</p>
+          <h1>Yale and Harvard</h1>
+          <p class="lead">For the first time, are teaming up in pursuit of a common goal: to brainstorm solutions to the world's most pressing problems.</p><br>
+          <%= link_to "See what they're up to", forums_path, class: "btn btn-large btn-primary" %>
         </div>
       </div>
     </div>
