--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,5 +1,10 @@
-To reset your password, click the link below.
+Hey <%= @user.name %>,
+
+We've received a request to reset your password. To do so, click the link below.
 
 <%= edit_password_reset_url(@user.password_reset_token) %>
 
-If you did not request your password to be reset, just ignore this email and your password will continue to stay the same!
+If you didn't request your password to be reset, just ignore this email and your password will remain the same!
+
+All the best,
+TANK
