--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="span6">picture</div>
+	<p class="span6">picture</p>
 	<div class="span6 lead">
 		<em>Vision blurb here</em>
 	</div>
