all jquery functional

--- a/app/assets/stylesheets/base/custom.css.scss
+++ b/app/assets/stylesheets/base/custom.css.scss
@@ -304,6 +304,12 @@ aside {
 	color: $grayLight;
 }
 
+/* mod interface jQuery */
+
+.topic {
+	display: none;
+}
+
 /* miscellaneous */
 
 .debug_dump {
