--- a/app/views/topics/_mod_interface.html.erb
+++ b/app/views/topics/_mod_interface.html.erb
@@ -1,13 +1,13 @@
 <p class="lead">There are currently <strong><%= @microposts.pending.count %></strong> posts pending review</p>
 
-<p>Idea: make this a vertical accordion</p>
+<p>NB: need to fix for individuals some time. darn turbolinks</p>
 
 <ul>
 <% @forums.each do |forum| %>
-	<li><h3><%= forum.name %></h3></li>
+	<li class="forum"><h3><%= forum.name %> (click to reveal topics!)</h3></li>
 	<% forum.topics.each do |topic| %>
 		<% if topic.microposts.pending.any? %>
-			<ul>
+			<ul class="topic">
 				<li><%= link_to topic.problem, topic %> (<%= topic.microposts.pending.count %>)</li>
 			</ul>
 		<% end %>
